<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MainActivity">

    <item
        android:id="@+id/action_profile_logged"
        android:title="@string/action_profile"
        android:icon="@drawable/settings"
        app:showAsAction="always"
        android:orderInCategory="1">
        <menu>
            <item
                android:id="@+id/action_logout"
                app:showAsAction="always"
                android:orderInCategory="1"
                android:title="@string/action_logout">
            </item>

            <item
                android:id="@+id/action_config_logged"
                app:showAsAction="always"
                android:orderInCategory="2"
                android:title="@string/action_config">
            </item>

            <item
                android:id="@+id/action_notification_logged"
                app:showAsAction="always"
                android:orderInCategory="4"
                android:title="@string/action_notify">
            </item>

            <item
                android:id="@+id/action_report_logged"
                app:showAsAction="always"
                android:orderInCategory="3"
                android:title="@string/action_report">
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/action_share_logged"
        android:title="@string/action_profile"
        android:icon="@drawable/share"
        app:showAsAction="always" />

    <item android:id="@+id/action_search"
          android:title="Search"
          android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView" />

</menu>