...
        android:layout_toStartOf="@+id/registerText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginAsVisitorText"
        android:text="Visitante"
        android:textColor="#77C777"
        android:clickable="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/imageViewLogo"/>

    <TextView
...
